k8s/skillpulse-service.yaml
# =========================================
# FRONTEND DEPLOYMENT
# =========================================

apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: skillpulse

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: shettymalathi113/skillpulse-frontend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80

---
# =========================================
# FRONTEND LOADBALANCER SERVICE
# =========================================

apiVersion: v1
kind: Service

metadata:
  name: frontend-ui
  namespace: skillpulse

spec:
  type: LoadBalancer

  selector:
    app: frontend

  ports:
    - port: 8888
      targetPort: 80

---
# =========================================
# BACKEND ROLLOUT
# =========================================

apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: backend
  namespace: skillpulse-prod

spec:
  replicas: 3

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend

          image: shettymalathi113/skillpulse-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

  strategy:
    canary:
      steps:
        - setWeight: 20

        - pause:
            duration: 30s

        - setWeight: 50

        - pause:
            duration: 30s

        - setWeight: 100

---
# =========================================
# BACKEND SERVICE
# =========================================

apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: skillpulse-prod

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - port: 8080
      targetPort: 8080

---
# =========================================
# GRAFANA SERVICE
# =========================================

apiVersion: v1
kind: Service

metadata:
  name: grafana

spec:
  type: LoadBalancer

  selector:
    app: grafana

  ports:
    - port: 8080
      targetPort: 3000

---
# =========================================
# PROMETHEUS SERVICE
# =========================================

apiVersion: v1
kind: Service

metadata:
  name: prometheus

spec:
  type: LoadBalancer

  selector:
    app: prometheus

  ports:
    - port: 9090
      targetPort: 9090

---
# =========================================
# AIOPS SERVICE
# =========================================

apiVersion: v1
kind: Service

metadata:
  name: aiops-ui

spec:
  type: LoadBalancer

  selector:
    app: aiops

  ports:
    - port: 8090
      targetPort: 8090

---
# =========================================
# ARGOCD SERVICE
# =========================================

apiVersion: v1
kind: Service

metadata:
  name: argocd-server
  namespace: argocd

spec:
  type: LoadBalancer

  selector:
    app.kubernetes.io/name: argocd-server

  ports:
    - port: 8081
      targetPort: 8080
